# PYTHON_ARGCOMPLETE_OK

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "libman"
version = "0.1.0"
description = "Monorepo package manager"

[project.scripts]
libman = "libman:main"

[tool.setuptools]
py-modules = ["libman"]

[tool.setuptools.packages.find]
include = ["lib*"]